# Hackathon-AINS

./: .editorconfig  .env.docker  .env.example  .env.production  .gitignore  AINS.code-workspace  API_FIRST_SETUP.md  CONTRIBUTING.md  DOCKER_README.md  LICENSE  Makefile  Makefile.docker  PROJECT_SUMMARY.md  README.md  docker-start.bat  package-lock.json  setup.bat  setup.sh  start-docker.bat
.github/: dependabot.yml
.github/workflows/: ci-cd.yml  security.yml
apis/: .dockerignore  .env.example  .gitignore  DOCKER_UV_README.md  Dockerfile  Dockerfile.dev  README.md  dev-setup.bat  dev-setup.sh  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run_pipeline.py  start_api.py  test.py  test.txt
apis/converters/: __init__.py  converter.py  text_from_audio.py  text_from_image.py  text_from_text.py
apis/helpers/: utils.py
apis/models/ClaimBuster/: model.py
apis/models/ClaimExtractor/: model.py
apis/models/Explainer/: model.py
apis/models/FakeNewsDetector/: model.py
apis/models/Google/: model.py
apis/models/LLM/: README.md  groq.py
apis/models/LoReN/: model.py
apis/models/NLI/: model.py
apis/models/SBERT/: model.py
apis/models/TunBERT/: model.py
apis/models/WinterForestStump/: model.py
apis/translator/: translate.py
apis/web_searcher/: app.py  extract_keywords.py
backend/: main.py
frontend/: README.md  package-lock.json
frontend/app/: globals.css  layout.tsx
frontend/app/(root)/: layout.tsx  page.tsx
frontend/app/components/: DragOverlay.tsx  FileListModal.tsx  FileUploadControls.tsx  FileUploadSection.tsx  HeroSection.tsx  LoadingIndicator.tsx  ResponseSection.tsx  SearchForm.tsx  SubmitButton.tsx
frontend/app/hooks/: useFileUpload.ts  useFormSubmission.ts
frontend/app/types/: index.ts
frontend/app/utils/: apiUtils.ts  fileUtils.ts
pwa/: .gitignore  Dockerfile  Dockerfile.build  index.html  main.js  nginx.conf  vite.config.js
