[project]
name = "apis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "googletrans>=4.0.2",
    "pandas>=2.3.0",
    "pytest>=8.4.0",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "sentence-transformers>=4.1.0",
    "sentencepiece>=0.2.0",
]
